styles/main.css
/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
    box-sizing: border-box;
  }
  
  /* 2. Remove default margin */
  * {
    margin: 0;
  }
  
  /* 3. Enable keyword animations */
  @media (prefers-reduced-motion: no-preference) {
    html {
      interpolate-size: allow-keywords;
    }
  }
  
  body {
    /* 4. Add accessible line-height */
    line-height: 1.5;
    /* 5. Improve text rendering */
    -webkit-font-smoothing: antialiased;
  }
  
  /* 6. Improve media defaults */
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }
  
  /* 7. Inherit fonts for form controls */
  input, button, textarea, select {
    font: inherit;
  }
  
  /* 8. Avoid text overflows */
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  
  /* 9. Improve line wrapping */
  p {
    text-wrap: pretty;
  }
  h1, h2, h3, h4, h5, h6 {
    text-wrap: balance;
  }
  
  /*
    10. Create a root stacking context
  */
  #root, #__next {
    isolation: isolate;
  }


/* START CODING here*/

div{
    border: 1px dotted black;
}


/* made the body display flex to divide the page into a left and right container*/
body{
    display: flex;
}

/* 
added flex values, notably a flex basis of 30vw for the left container to occupy 30% of the viewport
100vh to occupy the whole viewport height

*/
.left-container{
    flex: 1 1 30vw;
    border: 5px solid red;
    height: 100vh;
}

/* 
added flex values, notably a flex basis of 70vw for the right container to occupy 30% of the viewport
100vh to occupy the whole viewport height
made a flex container to center content of the right container
change flex-direction from default to column
and use padding-top to pad the top of the container
*/
.right-container {
    flex: 1 1 70vw;
    border: 5px solid green;
    height: 100vh;

    display: flex;
    flex-direction: column;
    padding-top: 10vw;
}

/*  
added height for the container
added a 10vw for the margin-top, to create space
made it a flex container, to align the content in the center with justify-content: center
*/
.logo-container{
    border: 1px solid blue;
    height: 10vw;
    align-self: start;
    margin-top: 10vw;
    display: flex;
    justify-content: center;
}

/*  
added align-self, to center content along the y axis
*/
.logo-container p{
    border: 1px solid red;
    align-self: center;

}


.right-container div{

}

